# quickcdc

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
examples/: chunkdir.rs
src/: lib.rs
tests/: quickcheck.rs
